--- a/BlazorClient/Pages/Users/Index.razor
+++ b/BlazorClient/Pages/Users/Index.razor
@@ -5,9 +5,9 @@
 @using System.BLL.Models.UserManagement
 @using BlazorClient.Services.GroupManagement
 @attribute [Authorize]
-@inject NavigationManager NavigationManager
-@inject IAccountService AccountService
-@inject IGroupService groupService
+@inject NavigationManager _navigationManager
+@inject IAccountService _accountService
+@inject IGroupService _groupService
 
 
 <div class="table">
@@ -18,13 +18,6 @@
               FilterMethod="DataGridFilterMethod.Contains">
 
         <DataGridColumns>
-            @* <DataGridCommandColumn TItem="UserModel"> *@
-            @* *@
-            @*     <DeleteCommandTemplate> *@
-            @*         <Button Color="Color.Danger" Clicked="@context.Clicked">Delete</Button> *@
-            @*     </DeleteCommandTemplate> *@
-            @* *@
-            @* </DataGridCommandColumn> *@
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.UserName)" Caption="Имя пользователя"/>
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Name)" Caption="Имя"/>
             <DataGridColumn TItem="UserModel" Field="@nameof(UserModel.Surname)" Caption="Фамилия"/>
@@ -68,7 +61,7 @@
     protected override async Task OnInitializedAsync()
     {
         _loading = true;
-        _users = (await AccountService.GetAll()).ToList();
+        _users = (await _accountService.GetAll()).ToList();
         _totalCount = _users.Count;
         _loading = false;
     }
@@ -77,7 +70,7 @@
     {
         var user = _users.First(x => x.Id == id);
         _isDeleting = true;
-        await AccountService.Delete(id);
+        await _accountService.Delete(id);
         _users.Remove(user);
         StateHasChanged();
         _isDeleting = false;
@@ -85,7 +78,7 @@
 
     private void EditUser(int id)
     {
-        NavigationManager.NavigateTo($"/users/{id}/edit");
+        _navigationManager.NavigateTo($"/users/{id}/edit");
     }
 
 }
