--- a/BlazorClient/Shared/MainLayout.razor.css
+++ b/BlazorClient/Shared/MainLayout.razor.css
@@ -5,135 +5,26 @@
     font-style: normal;
 }
 
-::deep .header-bar {
-    min-height: calc(5vh - 1px);
+::deep .header-bar a{
+    font-weight: 500;
+    padding: 0.5rem;
 }
 
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-.top-row ::deep a, .top-row .btn-link {
-    white-space: nowrap;
-    margin-left: 1.5rem;
-}
-
-.top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-body .navbar-expand {
-    background-color: #F5F6F7;
-    padding: 0;
-}
-
-.home {
-    font-size: 200%;
+::deep .logo-text-wrapper {
+    
+    /*font-size: 200%;*/
     font-family: 'F1', 'Exo 2', serif;
     font-weight: bold;
     margin: auto;
-}
-
-
-::deep .nav-menu {
-    display: flex;
-    padding-left: 40px;
-    align-items: center;
 }
 
 .user-image {
     max-height: 4vh;
 }
 
-.user-profile {
-    display: flex;
-    padding-left: 300px;
-    align-items: center;
-}
-
 .shadow {
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .05) !important;
     border: 0.25px solid #D7D8D9;
-}
-
-.sider {
-    display: flex;
-    background-color: #eeeeee;
-    width: 100%
-}
-
-/*::deep .sidebar {*/
-/*    min-height: 10vh;*/
-/*}*/
-
-@media (max-width: 641px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
-
-    .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .top-row a, .top-row .btn-link {
-        margin-left: 0;
-    }
-
-    .home {
-        position: relative;
-        left: 60px;
-    }
-
-    .nav-menu {
-        position: relative;
-        left: 60px
-    }
-
-    .user-profile {
-        position: relative;
-        right: 270px;
-    }
-}
-
-
-@media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .main > div {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
 }
 
 ::deep .separate-add-button {
