--- a/BlazorClient/Pages/Groups/Index.razor
+++ b/BlazorClient/Pages/Groups/Index.razor
@@ -4,6 +4,7 @@
 @using BlazorClient.Services.GroupManagement
 @using System.BLL.Models.GroupManagement
 @using System.Web
+@using GroupModel = BlazorClient.Models.Group.GroupModel
 @attribute [Authorize]
 @inject NavigationManager _navigationManager
 @inject IGroupService _groupService
