--- a/BlazorClient/Pages/Account/Login.razor.css
+++ b/BlazorClient/Pages/Account/Login.razor.css
@@ -6,7 +6,7 @@
 .login-bg-image {
     background-image: url('../assets/images/bg.png');
     background-repeat: no-repeat;
-    background-position: center right;
+    background-position: center left;
     background-size: auto 100%;
     height: 100%;
     width: 100%;
