--- a/BlazorClient/Pages/Groups/Add.razor
+++ b/BlazorClient/Pages/Groups/Add.razor
@@ -3,119 +3,125 @@
 @using BlazorClient.Services.GroupManagement
 @using BlazorClient.Services.AlertManagement
 @using System.BLL.Models.GroupManagement;
+@using BlazorClient.Models.Enums
+@using GroupModel = BlazorClient.Models.Group.GroupModel
 
 @attribute [Authorize]
 @inject IAlertService _alertService
 @inject IGroupService _groupService
 @inject NavigationManager _navigationManager
 
-    <div class="form">
-            <h1>Add Group</h1>
+<div class="white-bg-plate form">
+    <h1>Добавить</h1>
+
+    <EditForm Model="@_model" OnValidSubmit="OnValidSubmit">
+        <DataAnnotationsValidator/>
+
+        <Divider DividerType="DividerType.TextContent" Text="О группе"/>
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Название</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Placeholder="Си шарп ПН-СР" @bind-Text="@_model.Title"/>
+            </FieldBody>
+        </Field>
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Количество учащихся</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <NumericEdit Placeholder="10" @bind-Value="@_model.Capacity"/>
+            </FieldBody>
+        </Field>
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Соцсеть группы</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Placeholder="VK" @bind-Text="@_model.Messenger"/>
+            </FieldBody>
+        </Field>
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Уроков в неделю</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <NumericEdit Placeholder="Уроков в неделю" @bind-Value="@_model.LessonsPerWeek"/>
+            </FieldBody>
+        </Field>
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Начало занятий</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <DateEdit Placeholder="Начало занятий" @bind-Date="@_model.StartDate"/>
+            </FieldBody>
+        </Field>
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Окончание занятий</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <DateEdit Placeholder="Окончание занятий" @bind-Date="@_model.EndDate"/>
+            </FieldBody>
+        </Field>
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Ссылка на конференцию</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Role="TextRole.Url" Placeholder="Ссылка на конференцию" @bind-Text="@_model.OnlineConversationLink"/>
+            </FieldBody>
+        </Field>
 
 
-            <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
-                <DataAnnotationsValidator />
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Статус</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <Select TValue="string"
+                        SelectedValueChanged="@(ctx => OnEnumValueChange(ctx))">
+                    @foreach (Enum item in Enum.GetValues(typeof(GroupStatus)))
+                    {
+                        <SelectItem Value="@item.ToString()">@item.ToString()</SelectItem>
+                    }
+                </Select>
+            </FieldBody>
+        </Field>
 
-                <div class="form-row">
-                    <div class="form-group col">
-                        <label>Название</label>
-                        <InputText @bind-Value="model.Title" class="form-control" />
-                        <ValidationMessage For="@(() => model.Title)" />
-                    </div>
-                    <div class="form-group col">
-                        <label>Уроков в неделю</label>
-                        <InputNumber @bind-Value="model.LessonsPerWeek" class="form-control" />
-                        <ValidationMessage For="@(() => model.LessonsPerWeek)" />
-                    </div>
+        <Row Class="justify-content-space ">
+            <Column ColumnSize="ColumnSize.Is12" Margin="new FluentMargin().Is2">
+                <Button Size="Size.Large" Color="Color.Primary" Block="true" disabled="@loading">
+                    @if (loading)
+                    {
+                        <span class="spinner-border spinner-border-sm mr-1"></span>
+                    }
+                    Сохранить
+                </Button>
+            </Column>
+            <Column ColumnSize="ColumnSize.Is12" Margin="new FluentMargin().Is0.FromTop.Is2">
+                <Button To="users" Color="Color.Secondary" Block="true">Отменить</Button>
+            </Column>
+        </Row>
+    </EditForm>
 
-                    <div class="form-group col">
-                        <label>Ссылка на конференцию</label>
-                        <InputText @bind-Value="model.OnlineConversationLink" class="form-control" />
-                        <ValidationMessage For="@(() => model.OnlineConversationLink)" />
-                    </div>
-
-                    <div class="form-group col">
-                        <label>Мессенджер</label>
-                        <InputText @bind-Value="model.Messenger" class="form-control" />
-                        <ValidationMessage For="@(() => model.Messenger)" />
-                    </div>
-
-                </div>
-                <div class="form-row">
-                    <div class="form-group col">
-                        <label>Начало занятий</label>
-                        <InputDate @bind-Value="model.StartDate" class="form-control" />
-                        <ValidationMessage For="@(() => model.StartDate)" />
-                    </div>
-                    <div class="form-group col">
-                        <label>Окончание занятий</label>
-                        <InputDate @bind-Value="model.EndDate" class="form-control" />
-                        <ValidationMessage For="@(() => model.EndDate)" />
-                    </div>
-
-                    <div class="form-group col">
-                        <label>Количество учащихся</label>
-                        <InputNumber @bind-Value="model.Capacity" class="form-control" />
-                        <ValidationMessage For="@(() => model.Capacity)" />
-                    </div>
-
-                    <div class="form-group col">
-                        <label>Статус</label>
-                        @*<select @bind-value="model.status" class="form-control" />*@
-                        <Select TValue="string">
-                            @foreach (var item in _groupStatus)
-                            {
-                                <SelectItem Value="@item">@item</SelectItem>
-                            }
-                        </Select>
-                        <ValidationMessage For="@(() => model.Status)" />
-                    </div>
+</div>
 
 
-                </div>
-                <div class="form-group">
-                    <button disabled="@loading" class="btn btn-primary">
-                        @if (loading)
-                        {
-                            <span class="spinner-border spinner-border-sm mr-1"></span>
-                        }
-                        Save
-                    </button>
-                    <NavLink href="users" class="btn btn-link">Cancel</NavLink>
-                </div>
-            </EditForm>
-    </div>
+@code {
 
+    private GroupModel _model = new();
+    private bool loading;
 
-
-    @code {
-
-        private static readonly string[] _groupStatus =
-            {
-            "Recruitment",
-        "PendingStart",
-        "InProgress",
-        "Canceled"
-
-        };
-
-        private GroupModel model = new GroupModel();
-        private bool loading;
-
-        private async void OnValidSubmit()
+    private async void OnValidSubmit()
+    {
+        loading = true;
+        try
         {
-            loading = true;
-            try
-            {
-                await _groupService.AddAsync(model);
-                _alertService.Success("Group added successfully", keepAfterRouteChange: true);
-                _navigationManager.NavigateTo("users");
-            }
-            catch (Exception ex)
-            {
-                _alertService.Error(ex.Message);
-                loading = false;
-                StateHasChanged();
-            }
+            await _groupService.AddAsync(_model);
+            _alertService.Success("Group added successfully", keepAfterRouteChange: true);
+            _navigationManager.NavigateTo("users");
+        }
+        catch (Exception ex)
+        {
+            _alertService.Error(ex.Message);
+            loading = false;
+            StateHasChanged();
         }
     }
+
+
+    private void OnEnumValueChange(string enumString)
+    {
+        Enum.TryParse(enumString, out GroupStatus status);
+        _model.Status = status;
+    }
+
+}
