--- a/BlazorClient/Pages/Users/Add.razor
+++ b/BlazorClient/Pages/Users/Add.razor
@@ -3,88 +3,103 @@
 @using BlazorClient.Services.AccountManagement
 @using BlazorClient.Services.AlertManagement
 @attribute [Authorize]
-@inject IAlertService AlertService
-@inject IAccountService AccountService
-@inject NavigationManager NavigationManager
+@inject IAlertService _alertService
+@inject IAccountService _accountService
+@inject NavigationManager _navigationManager
 
-    <div class="form">
-        <h1>Add User</h1>
-        <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
-            <DataAnnotationsValidator />
-            <div class="form-row">
-                <div class="form-group col">
-                    <label>Username</label>
-                    <InputText @bind-Value="model.UserName" class="form-control" />
-                    <ValidationMessage For="@(() => model.UserName)" />
-                </div>
-                <div class="form-group col">
-                    <label>First Name</label>
-                    <InputText @bind-Value="model.Name" class="form-control" />
-                    <ValidationMessage For="@(() => model.Name)" />
-                </div>
-                <div class="form-group col">
-                    <label>Last Name</label>
-                    <InputText @bind-Value="model.Surname" class="form-control" />
-                    <ValidationMessage For="@(() => model.Surname)" />
-                </div>
-                <div class="form-group col">
-                    <label>Email</label>
-                    <InputText @bind-Value="model.MiddleName" class="form-control" />
-                    <ValidationMessage For="@(() => model.MiddleName)" />
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col">
-                    <label>Email</label>
-                    <InputText @bind-Value="model.Email" class="form-control" />
-                    <ValidationMessage For="@(() => model.Email)" />
-                </div>
-                <div class="form-group col">
-                    <label>Password</label>
-                    <InputText @bind-Value="model.Password" type="password" class="form-control" />
-                    <ValidationMessage For="@(() => model.Password)" />
-                </div>
-                <div class="form-group col">
-                    <label>День рождения</label>
-                    <InputDate @bind-Value="model.BirthDay" class="form-control" />
-                    <ValidationMessage For="@(() => model.BirthDay)" />
-                </div>
-                <div class="form-group col">
-                    
-                </div>
+<div class="white-bg-plate form">
+    <h1>Добавить</h1>
+    <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
+        <DataAnnotationsValidator/>
 
-            </div>
-            <div class="form-group">
-                <button disabled="@loading" class="btn btn-primary">
-                    @if (loading)
+        <Divider DividerType="DividerType.TextContent" Text="О пользователе"
+                 Margin="Margin.Is4.FromTop.Is4.FromBottom"/>
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Имя пользователя</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Placeholder="Имя пользователя" @bind-Text="@model.UserName"/>
+            </FieldBody>
+        </Field>
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Фамилия</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Placeholder="Фамилия" @bind-Text="@model.Surname"/>
+            </FieldBody>
+        </Field>
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Имя</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Placeholder="Имя" @bind-Text="@model.Name"/>
+            </FieldBody>
+        </Field>
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Отчество</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Placeholder="Отчество" @bind-Text="@model.MiddleName"/>
+            </FieldBody>
+        </Field>
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Дата рождения</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <DateEdit TValue="DateTime" @bind-Date="@model.BirthDay"/>
+            </FieldBody>
+        </Field>
+
+
+        <Field Horizontal="true">
+            <FieldLabel ColumnSize="ColumnSize.Is5">Пароль</FieldLabel>
+            <FieldBody ColumnSize="ColumnSize.Is5">
+                <TextEdit Role="TextRole.Password" @bind-Text="@model.Password"/>
+            </FieldBody>
+        </Field>
+
+        <Divider DividerType="DividerType.TextContent" Text="Местоположение"
+                 Margin="Margin.Is4.FromTop.Is4.FromBottom"/>
+
+
+        <Row Class="justify-content-space ">
+            <Column ColumnSize="ColumnSize.Is12" Margin="Margin.Is2">
+                <Button Size="Size.Large" Color="Color.Primary" Block="true" disabled="@_loading">
+                    @if (_loading)
                     {
                         <span class="spinner-border spinner-border-sm mr-1"></span>
                     }
-                    Save
-                </button>
-                <NavLink href="users" class="btn btn-link">Cancel</NavLink>
-            </div>
-        </EditForm>
-    </div>
+                    Сохранить
+                </Button>
+            </Column>
+            <Column ColumnSize="ColumnSize.Is12" Margin="Margin.Is0.FromTop.Is2">
+                <Button To="users" Color="Color.Secondary" Block="true">Отменить</Button>
+            </Column>
 
-    @code {
-        private AddUser model = new AddUser();
-        private bool loading;
+        </Row>
+    </EditForm>
+</div>
+<AlertCustom/>
 
-        private async void OnValidSubmit()
+@code {
+    private AddUser model = new AddUser();
+    private bool _loading;
+
+    private async void OnValidSubmit()
+    {
+        _loading = true;
+        try
         {
-            loading = true;
-            try
-            {
-                await AccountService.Register(model);
-                AlertService.Success("User added successfully", keepAfterRouteChange: true);
-                NavigationManager.NavigateTo("users");
-            }
-            catch (Exception ex)
-            {
-                AlertService.Error(ex.Message);
-                loading = false;
-                StateHasChanged();
-            }
+            await _accountService.Register(model);
+            _alertService.Success("User added successfully", keepAfterRouteChange: true);
+            _navigationManager.NavigateTo("users");
+        }
+        catch (Exception ex)
+        {
+            _alertService.Error(ex.Message);
+            _loading = false;
+            StateHasChanged();
         }
     }
+
+}
